trunk/Archive2/b3/47d323d68165f7/output
main.cpp:44:5: error: no matching constructor for initialization of 'QualifiedTypeID'
    QualifiedTypeID()<T>.summarize();
    ^
main.cpp:17:9: note: candidate template ignored: couldn't infer template argument 'T'
        QualifiedTypeID() :
        ^
main.cpp:8:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class QualifiedTypeID {
      ^
main.cpp:8:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
main.cpp:44:23: error: 'T' does not refer to a value
    QualifiedTypeID()<T>.summarize();
                      ^
main.cpp:42:16: note: declared here
template<class T>
               ^
main.cpp:44:25: error: expected expression
    QualifiedTypeID()<T>.summarize();
                        ^
3 errors generated.
